SDK compatibility: Java 8 target (records converted, HttpURLConnection), C# multi-target netstandard2.0/2.1/net8.0, Python >=3, CLI binary in GitHub Release assets